--- a/html_css/responsive_design/small.css
+++ b/html_css/responsive_design/small.css
@@ -1,7 +1,132 @@
-/*Your mobile targeted css should go here*/
+/*----------------- CSS RESET ------------------*/
 
-nav {
-	/*background-color: blue;*/
-	border: 1px solid blue;
-	width: 50%;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*----------------- CSS RESET ------------------*/
+
+
+
+html {
+	font-family: 'Arimo', sans-serif;
+	background-color: #428000;
+}
+
+header, footer{
+	text-align: center;
+	margin: 1em;
+}
+
+header {
+	/*code for fixed centering from http://stackoverflow.com/questions/2861247/center-aligning-a-fixed-position-div*/
+	/*position: fixed;
+	width: 75%;
+	left: 50%;
+	margin-left: -37.5%;
+	height: 10%;*/
+	background-color: #428000;
+	text-align: center;
+}
+
+header * {
+	margin: .2em;
+	background-color: #428000;
+}
+
+/*nav {
+	border: 1px solid #ff0000;
+}
+test for stylesheet loading */
+
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Anton';
+	color: #b30000;
+	text-align: center;
+}
+h1 {
+	font-size: 2em;
+}
+
+a {
+	color: #ff9900;
+}
+.main-container {
+	width: 98%;
+	/*margin-top: 10%;*/
+	margin-left: 1%;
+}
+
+.project {
+	margin-top: 10px;
+	width: 100%;
+	display: inline-block;
+	vertical-align: top;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #666666;
+}
+
+.project * {
+	margin: .2em;
+}
+
+.project-image {
+	text-align: center;
+}
+
+.project-image img {
+	max-width: 100%;
+	/*max-height: 150px;*/
+	display: inline-block;
+
+}
+.project-detail p {
+	max-width: 100%;
+	/*display: inline-block;*/
+}
+#contactinfo {
+	font-family: 'Anton';
+	color: #b30000;
 }
