--- a/armarium_app/app/templates/base.html
+++ b/armarium_app/app/templates/base.html
@@ -2,7 +2,11 @@
 <html>
 	<head>
 		<title>{{ pagetitle }}</title>
-		<link rel="stylesheet" href="static/main.css">
+		<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+		<script type="text/javascript" src="{{url_for('static', filename='script.js') }}"></script>
+
+
 		<meta charset="UTF-8">
 	</head>
 	
@@ -13,7 +17,9 @@
 			<nav>
 				<a href="{{ url_for('homepage') }}">Home</a>
 				<a href="{{ url_for('list_mss') }}">The Manuscripts</a>
-				<a href="{{ url_for('mss_search') }}">Search</a>
+				<a href="{{ url_for('list_people') }}">People</a>
+				<a href="{{ url_for('list_places') }}">Places</a>
+				<a href="{{ url_for('list_watermarks') }}">Watermarks</a>
 				<a href="https://www.law.berkeley.edu/library/robbins/">The Robbins Collection</a>
 			</nav>
 		</header>
