--- a/armarium_app/app/templates/home.html
+++ b/armarium_app/app/templates/home.html
@@ -1,11 +1,39 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Armarium</title>
-	</head>
+{% extends "base.html" %}
+{% block content %}
+	<div class="mapholder">
+		<div id="collectionmap"></div>
+		<script>
+		function initCollMap() {
+		var collectionMap = new google.maps.Map(document.getElementById('collectionmap'), {
+			center: {lat: {{ avgLat }}, lng: {{ avgLon }} },
+			zoom: 3,
+			zoomControl: false,
+			mapTypeControl: false,
+			scaleControl: false,
+			streetViewControl: false
+		});
 
-	<body>
-		<h1>Welcome to the Armarium!</h1>
-	</body>
+	var countrycircs;
+	countrycircs = {{ places }};
 
-<html>
+	for (country in countrycircs) {
+		var countryCircle = new google.maps.Circle({
+			strokeColor: '#FF0000',
+			strokeOpacity: .8,
+			strokeWeight: 2,
+			fillColor: '#FF0000',
+			fillOpacity: 0.35,
+			map: collectionMap,
+			center: countrycircs[country].center,
+			radius: 150000 + 1000*countrycircs[country].count 
+		});
+	}
+}
+		
+		
+		//console.log(countrycircs);
+		</script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9rloC3_q9b1ZwhocaDBpuXaXyJeZkKjk&callback=initCollMap"></script>
+		<p><em>Circles indicate countries of origin of Robbins Collection manuscripts</em></p>
+	</div>
+{% endblock %}
