--- a/armarium_app/app/templates/msview.html
+++ b/armarium_app/app/templates/msview.html
@@ -1,77 +1,236 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Robbins MS {{ ms.id }} - {{ ms.title }}</h3>
+<h3>Robbins MS {{ ms.id }} - {{ ms.titles.filter_by(title_type='main').first() }}</h3>
 <div class="section">
 
-{% if ms.title_alt %}
-<p>Alternate Title: {{ ms.title_alt }}</p>
+
+{% if ms.titles.filter(title_type in['uniform', 'varying', 'secundo']) %}
+	<!--<h4>Variations of Title:</h4>-->
+	{% if ms.titles.filter_by(title_type='uniform').first() %}
+	<p><b>Uniform Title:</b> {{ ms.titles.filter_by(title_type='uniform').first() }}</p>
+	<br>
+	{% endif %}
+	
+	{% if ms.titles.filter_by(title_type='secundo').first() %}
+	<p><b>Secundo folio:</b> {{ ms.titles.filter_by(title_type='secundo').first() }}</p>
+	<br>
+	{% endif %}
+	
+
+	{% if ms.titles.filter_by(title_type='varying') %}
+	<p><b>Variations of Title:</b></</p>
+		<ul>
+		{% for alt_title in ms.titles.filter_by(title_type='varying') %}
+		<li>{{ alt_title }}</li>
+
+		{% endfor %}
+		</ul>
+	{% endif %}
 {% endif %}
 
-{% if ms.title_uni %}
-<p>Uniform Title: {{ ms.title_uni }}</p>
+{% if ms.datetype == 's' %}
+	{% if ms.datecertain == True %}
+	<p><b>Date:</b> {{ ms.date1 }}</p>
+	{% else %}
+	<p><b>Date:</b> ca. {{ ms.date1 }}</p>
+
+	{% endif %}
+
+{% elif ms.datetype in ['k','q','i'] %}
+
+<p><b>Dates:</b> between {{ms.date1}} and {{ms.date2}}</p>
+
+{% else %}
+
+<p><b>Dates:</b> {{ms.date1}}-{{ms.date2}}</p>
+
 {% endif %}
 
-<p>Date: {{ ms.date1 }}</p>
-
-{% if ms.date2 %}
-<p>End Date: {ms.date2}</p>
-{% endif %}
-
-<p>Language: {{ ms.language }}</p>
+<p><b>Language:</b> {{ ms.language }}</p>
 
 {% if ms.publisher %}
 <p>Published by: {{ ms.publisher }}</p>
 {% endif %}
 
-<p>Origin: </p>
+{% if ms.places|length() > 1 %}
+<p><b>Places of Origin:</b><p>
+{% else %}
+<p><b>Place of Origin:</b><p>
+{% endif %}
 {% for place in ms.places %}
-<a href="{{ url_for('view_place', place.id) }}">{{ place.name }}</a>
+<a href="{{ 'place' + (place.id|string) }}">{{ place.place_name }}</a>
 {% endfor %}
 
+{% if ms.watermarks|length() > 0 %}
+<p><b>Watermarks:</b><p>
+{% for wm in ms.watermarks %}
+<a href="{{ 'watermark' + (wm.id|string) }}">Briquet {{ wm.id }} "{{ wm.name }}"</a>
+{% endfor %}
+{% endif %}
+
 {% if ms.summary %}
-<h6>Summary</h6>
+<p><b>Summary</b></p>
 <p>{{ ms.summary }}</p>
 {% endif %}
 
-<p>Number of Volumes: {{ ms.volumes }}</p>
+{% if ms.ownership_history %}
+<p><b>Ownership History</b></p>
+<p>{{ ms.ownership_history }}</p>
+{% endif %}
+
+<p><b>Number of Volumes:</b> {{ ms.num_volumes }}</p>
 
 {% for volume in ms.volumes %}
 
-<p>Material: {{ volume.support }}</p>
 
-<p>Extent: {{ volume.extent }} {{volume.extent_unit }}</p>
+<p><b>Material:</b> {{ volume.support }}</p>
 
+<p><b>Extent:</b> {{ volume.extent }} {{volume.extent_unit }}</p>
+
+<p><b>Dimensions:</b></p>
 <ul>
-{% if volume.supportheight and volume.supportwidth %}
-<li>Support dimensions: {{volume.supportheight}} x {{ volume.supportwidth }} {{volume.unit}}</li>
+{% if volume.leaf_height and volume.leaf_width %}
+<li>Support dimensions: {{volume.leaf_height}} x {{ volume.leaf_width }} {{volume.size_unit}}</li>
 {% endif %}
 
-{% if volume.writtenheight and volume.writtenwidth %}
-<li>Written area: {{volume.writtenheight}} x {{volume.writtenwidth}} {{volume.unit}}</li>
+{% if volume.written_height and volume.written_width %}
+<li>Written area: {{volume.written_height}} x {{volume.written_width}} {{volume.size_unit}}</li>
 {% endif %}
 
-{% if volume.boundheight and volume.boundwidth %}
-<li>Bound to {{volume.boundheight}} x {{volume.boundwidth}} {{volume.unit}}</li>
+{% if volume.bound_height and volume.bound_width %}
+<li>Bound to {{volume.bound_height}} x {{volume.bound_width}} {{volume.size_unit}}</li>
 {% endif %}
 </ul>
 
-{% if volume.quires %}
-<p>Register of Quires: {{ volume.quires }}</p>
+{% if volume.quire_register %}
+<p><b>Register of Quires:</b> {{ volume.quire_register }}</p>
+{% endif %}
+
+{% if volume.phys_arrangement %}
+<p><b>Arrangement:</b> {{ volume.phys_arrangement }}</p>
 {% endif %}
 
 {% endfor %}
 </div>
 
 
+{% if ms.volumes.first() %}
+<h4>Contents<h4>
+{% endif %}
+
+{% for volume in ms.volumes %}
+<table>
+{% for textitem in volume.contents %}
+<tr>
+	<td>{{ textitem.fol_start_num }}{{ textitem.fol_start_side }} 
+	{% if textitem.fol_end_num != None %}
+	- {{ textitem.fol_end_num }}
+	{% endif %}
+	{% if textitem.fol_end_side != None %}
+	{{ textitem.fol_end_side }}
+	{% endif %}
+	</td>
+	<td>{{ textitem.text }}</td>
+</tr>
+
+
+{% endfor %}
+</table>
+
+{% endfor %}
+
 <!--canvases for d3 visualizations-->
-<div class="section"
-<svg id="textvis">
+<div class="section" id="relationvis">
+</div>
+<script src="static/d3.js"></script>
+<script>
+
+var width = 490,
+    height = 250;
+
+var color = d3.scale.category20();
+
+var force = d3.layout.force()
+    .charge(-120)
+    .linkDistance(30)
+    .size([width, height]);
+
+var svg = d3.select("#relationvis").append("svg")
+    .attr("id", "graphcanvas")
+    .attr("width", width)
+    .attr("height", height);
+
+var msGraph = {{ graphsend|safe }}
+/*for (element in msGraph) {
+  for (point in msGraph[element]) {
+    console.log(msGraph[element][point])
+  }
+
+} */
+
+/*d3.json(msGraph, function(error, graph) {
+  if (error) throw error;
+  console.log(msGraph);
+*/
+graph = msGraph
+console.log(msGraph);
+  force
+      .nodes(graph.nodes)
+      .links(graph.links)
+      .linkStrength(.01) //function(links) { return (links.value/20)};);
+      .start();
+
+  var link = svg.selectAll(".link")
+      .data(graph.links)
+    .enter().append("line")
+      .attr("class", "link")
+      .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+
+  var node = svg.selectAll(".node")
+      .data(graph.nodes)
+    .enter().append("circle")
+      .attr("class", "node")
+      .attr("r", 5)
+      .style("fill", function(d) { return color(d.group); })
+      .call(force.drag)
+      .attr("name", function(d) {return d.name })
+      .attr("group", function(d) {return d.group })
+      .attr("dbkey", function(d) {return d.dbkey })
+      .attr("onclick", "getNewNodes(this)");
+
+  var texts = svg.selectAll("text.label")
+  	.data(graph.nodes)
+  	.enter().append("text")
+  	.attr("class", "label")
+  	.attr("fill", "black")
+  	.text(function(d) { return d.name; });
+  node.append("text")
+  	.attr("dx", 12)
+  	.attr("dy", ".35em")
+      .text(function(d) { return d.name; });
+
+  force.on("tick", function() {
+    link.attr("x1", function(d) { return d.source.x; })
+        .attr("y1", function(d) { return d.source.y; })
+        .attr("x2", function(d) { return d.target.x; })
+        .attr("y2", function(d) { return d.target.y; });
+
+    node.attr("cx", function(d) { return d.x; })
+        .attr("cy", function(d) { return d.y; });
+
+    texts.attr("transform", function(d) {
+        return "translate(" + (d.x +5) + "," + d.y + ")";
+    });
+  });
+//});
+
+</script>
+
+<div class="section" id="textvis">
 </div>
 
-<div class="section"
-<svg id="relationvis">
-</div>
+
 
 
 
